# spline

./: CMakeLists.txt  Doxyfile.in  LICENSE  README.md
spline/: BSplineCurve.hpp  CMakeLists.txt  DegreeTraits.hpp  Derivative.hpp  FloatingPointTraits.hpp  Infinity.hpp  KnotParameterTransform.hpp  PiecewisePolynomial.hpp  Polynomial.hpp  PolynomialSplinePiece.hpp  SimplePolynomial.hpp  SplineApproximation.hpp  SplineIntervalTraits.hpp  UnivariateSplineCurve.hpp  UnivariateSplineEstimator.hpp  libspline-config.cmake.in  spline.h
test/: CMakeLists.txt  HornerSchemeTest.cpp  KnotTransformTest.cpp  PiecewisePolynomialTest.cpp  PolynomialRootsTest.cpp
